--- a/jay_spinners.html
+++ b/jay_spinners.html
@@ -1,22 +1,22 @@
-<table cellpadding="0" cellspacing="0" border="0" style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'Trebuchet MS';">
-   <tr>
-      <td valign="top" style="padding-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 7px; border-top: 0; border-bottom: 0: border-left: 0;"><img style='width: 200px;' id="preview-image-url" src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/jay_pic.png"></td>
-      <td style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0;">
+<div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'divebuchet MS';">
+   <div>
+      <div style="padding-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 7px; border-top: 0; border-bottom: 0: border-left: 0; float: left;"><a href='http://www.spinnersent.com/'><img style='width: 200px;' id="preview-image-url" src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/jay_pic.png"></a></div>
+      <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 20px;">
          <table cellpadding="0" cellspacing="0" border="0" style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0;">
-            <tr>
-               <td colspan="2" style="padding-bottom: 10px; font-size: 13px;">
+            <div>
+               <div colspan="2" style="padding-bottom: 10px; font-size: 13px;">
                   <span style='font-weight: bold; color: #ff3a9e;'>
                      Jay Della Valle
                   </span>
                   |
                   <span style='opacity: 0.825;'>
-                     Director of Operations
+                     Owner & Operator
                   </span>
-               </td>
-            </tr>
+               </div>
+            </div>
 
-            <tr>
-               <td colspan="2" style="padding-bottom: 10px; font-size: 13px; opacity: 0.825;">
+            <div>
+               <div colspan="2" style="padding-bottom: 10px; font-size: 13px; opacity: 0.825;">
                   |
                   <span>
                      Spinners Entertainment
@@ -34,20 +34,20 @@
                      </a>
                   </span>
 
-               </td>
-            </tr>
-            <tr>
-               <td colspan="2" style="font-size: 13px; opacity: 0.825;">
+               </div>
+            </div>
+            <div>
+               <div colspan="2" style="font-size: 13px; opacity: 0.825;">
                   |
                   <span style="font-weight: bold;">t.</span>  
                   <span style="">732-672-2937</span>
                   |
                   <span style="font-weight: bold;">a.</span>  
                   <span style="">36 Cooper Sq., 2nd Flr, New York, NY 10003</span>
-               </td>
-            </tr>
-            <tr>
-               <td colspan="2" style="font-size: 13px; opacity: 0.825;">
+               </div>
+            </div>
+            <div>
+               <div colspan="2" style="font-size: 13px; opacity: 0.825;">
                   |
                   <span style="font-weight: bold;">e.</span>  
                   <span style=""><a href="mailto:kevin@spinnersent.com" style='color: #ff3a9e; text-decoration: none;'>kevin@spinnersent.com</a></span>
@@ -62,9 +62,9 @@
                   <a href="https://www.owlsandlions.com/"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/sping-ol.png"></a>
                   
 
-               </td>
-            </tr>
+               </div>
+            </div>
          </table>
-      </td>
-   </tr>
-</table>
+      </div>
+   </div>
+</div>
