--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
 
 
 
-<br>
-<hr>
-<br>
+<div class='float:left; width: 100%; border-bottom: 2px solid #000; margin-top: 40px; padding-bottom: 40px;'>
 
 
 <div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'divebuchet MS';">
