--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'divebuchet MS';">
+<div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'Trebuchet MS';">
    <div>
       <div style="padding-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 7px; border-top: 0; border-bottom: 0: border-left: 0; float: left;"><a href='http://www.spinnersent.com/'><img style='width: 200px;' id="preview-image-url" src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/jay_pic.png"></a></div>
       <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 20px;">
@@ -72,13 +72,14 @@
 
 
 
-<div class='float:left; width: 100%; border-bottom: 2px solid #000; margin-top: 40px; padding-bottom: 40px;'>
+<div style="height: 200px;">
+</div>
 
 
-<div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'divebuchet MS';">
+<div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'Trebuchet MS';">
    <div>
       <div style="padding-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 7px; border-top: 0; border-bottom: 0: border-left: 0; float: left;"><a href='http://www.spinnersent.com/'><img style='width: 200px;' id="preview-image-url" src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/kevin-headshot.png"></a></div>
-      <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 30px;">
+      <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 20px;">
          <table cellpadding="0" cellspacing="0" border="0" style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0;">
             <div>
                <div colspan="2" style="padding-bottom: 10px; font-size: 13px;">
