--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
                <div colspan="2" style="padding-bottom: 10px; font-size: 13px; opacity: 0.825;">
                   |
                   <span>
-                     Spinners Entertainment
+                     <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>spinnersent.com</a>
                   </span>
                   |
                   <span>
-                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>
-                        The Knot
-                     </a>
+                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>The Knot</a>
                   </span>
                   |
                   <span>
-                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>
-                        Wedding Wire
-                     </a>
+                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>Wedding Wire</a>
                   </span>
 
                </div>
@@ -43,7 +39,7 @@
                   <span style="">732-672-2937</span>
                   |
                   <span style="font-weight: bold;">a.</span>  
-                  <span style="">36 Cooper Sq., 2nd Flr, New York, NY 10003</span>
+                  <span style="">36 Cooper Sq. #3 NY, NY 10003</span>
                </div>
             </div>
             <div>
@@ -52,10 +48,6 @@
                   <span style="font-weight: bold;">e.</span>  
                   <span style=""><a href="mailto:kevin@spinnersent.com" style='color: #ff3a9e; text-decoration: none;'>kevin@spinnersent.com</a></span>
                   |
-                  <span style="font-weight: bold;">w.</span>  
-                  <span style=""><a href="http://www.spinnersent.com" style='color: #ff3a9e; text-decoration: none;'>spinnersent.com</a></span>
-                  |
-
                   <a href="https://www.facebook.com/spinnersent/?ref=sgm"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/spin-face.png"></a>
                   <a href="https://vimeo.com/spinnersentertainment"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/spin-vim.png"></a>
                   <a href="https://www.instagram.com/spinners_entertainment/"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/sping-insta.png"></a>
@@ -83,13 +75,9 @@
          <table cellpadding="0" cellspacing="0" border="0" style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0;">
             <div>
                <div colspan="2" style="padding-bottom: 10px; font-size: 13px;">
-                  <span style='font-weight: bold; color: #ff3a9e;'>
-                     Kevin Walters
-                  </span>
+                  <span style='font-weight: bold; color: #ff3a9e;'>Kevin Walters</span>
                   |
-                  <span style='opacity: 0.825;'>
-                     Director of Operations
-                  </span>
+                  <span style='opacity: 0.825;'>Director of Operations</span>
                </div>
             </div>
 
@@ -97,21 +85,16 @@
                <div colspan="2" style="padding-bottom: 10px; font-size: 13px; opacity: 0.825;">
                   |
                   <span>
-                     Spinners Entertainment
+                     <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>spinnersent.com</a>
                   </span>
                   |
                   <span>
-                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>
-                        The Knot
-                     </a>
+                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>The Knot</a>
                   </span>
                   |
                   <span>
-                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>
-                        Wedding Wire
-                     </a>
+                     <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>Wedding Wire</a>
                   </span>
-
                </div>
             </div>
             <div>
@@ -121,7 +104,7 @@
                   <span style="">732-672-2937</span>
                   |
                   <span style="font-weight: bold;">a.</span>  
-                  <span style="">36 Cooper Sq., 2nd Flr, New York, NY 10003</span>
+                  <span style="">36 Cooper Sq. #3 NY, NY 10003</span>
                </div>
             </div>
             <div>
@@ -129,9 +112,7 @@
                   |
                   <span style="font-weight: bold;">e.</span>  
                   <span style=""><a href="mailto:kevin@spinnersent.com" style='color: #ff3a9e; text-decoration: none;'>kevin@spinnersent.com</a></span>
-                  |
-                  <span style="font-weight: bold;">w.</span>  
-                  <span style=""><a href="http://www.spinnersent.com" style='color: #ff3a9e; text-decoration: none;'>spinnersent.com</a></span>
+                  
                   |
 
                   <a href="https://www.facebook.com/spinnersent/?ref=sgm"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/spin-face.png"></a>
