--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <div colspan="2" style="padding-bottom: 10px; font-size: 13px; opacity: 0.825;">
                   |
                   <span>
-                     <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>spinnersent.com</a>
+                     Spinners Entertainment
                   </span>
                   |
                   <span>
@@ -38,16 +38,16 @@
                   <span style="font-weight: bold;">t.</span>  
                   <span style="">732-672-2937</span>
                   |
-                  <span style="font-weight: bold;">a.</span>  
-                  <span style="">36 Cooper Sq. #3 NY, NY 10003</span>
+                  <span style="font-weight: bold;">a.</span> 
+                  <span style=""><a href="https://www.google.com/maps/search/36+Cooper+Sq,+3rd+Floor.+New+York,+NY+10003/@40.7283288,-73.9936681,17z" style='color: #000; text-decoration: none;'>36 Cooper Sq. New York, NY.</a></span>
                </div>
             </div>
             <div>
                <div colspan="2" style="font-size: 13px; opacity: 0.825;">
                   |
-                  <span style="font-weight: bold;">e.</span>  
-                  <span style=""><a href="mailto:kevin@spinnersent.com" style='color: #ff3a9e; text-decoration: none;'>kevin@spinnersent.com</a></span>
-                  |
+                  <span style="font-weight: bold;">w.</span>
+                  <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>www.SpinnersEnt.com</a>
+                  
                   <a href="https://www.facebook.com/spinnersent/?ref=sgm"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/spin-face.png"></a>
                   <a href="https://vimeo.com/spinnersentertainment"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/spin-vim.png"></a>
                   <a href="https://www.instagram.com/spinners_entertainment/"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/sping-insta.png"></a>
@@ -85,7 +85,7 @@
                <div colspan="2" style="padding-bottom: 10px; font-size: 13px; opacity: 0.825;">
                   |
                   <span>
-                     <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>spinnersent.com</a>
+                     Spinners Entertainment
                   </span>
                   |
                   <span>
@@ -104,17 +104,15 @@
                   <span style="">732-672-2937</span>
                   |
                   <span style="font-weight: bold;">a.</span>  
-                  <span style="">36 Cooper Sq. #3 NY, NY 10003</span>
+                  <span style=""><a href="https://www.google.com/maps/search/36+Cooper+Sq,+3rd+Floor.+New+York,+NY+10003/@40.7283288,-73.9936681,17z" style='color: #000; text-decoration: none;'>36 Cooper Sq. New York, NY.</a></span>
                </div>
             </div>
             <div>
                <div colspan="2" style="font-size: 13px; opacity: 0.825;">
                   |
-                  <span style="font-weight: bold;">e.</span>  
-                  <span style=""><a href="mailto:kevin@spinnersent.com" style='color: #ff3a9e; text-decoration: none;'>kevin@spinnersent.com</a></span>
+                  <span style="font-weight: bold;">w.</span>
+                  <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>www.SpinnersEnt.com</a>
                   
-                  |
-
                   <a href="https://www.facebook.com/spinnersent/?ref=sgm"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/spin-face.png"></a>
                   <a href="https://vimeo.com/spinnersentertainment"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/spin-vim.png"></a>
                   <a href="https://www.instagram.com/spinners_entertainment/"><img style= 'width: 20px; top: 5px; position: relative;' src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/sping-insta.png"></a>
