--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                   </span>
                   |
                   <span style='opacity: 0.825;'>
-                     Entertainment Coordinator
+                     Owner & Operator
                   </span>
                </div>
             </div>
@@ -34,7 +34,7 @@
                   <span style="">917-749-6035</span>
                   |
                   <span style="font-weight: bold;">a.</span> 
-                  <span style=""><a href="https://www.google.com/maps/search/36+Cooper+Sq,+3rd+Floor.+New+York,+NY+10003/@40.7283288,-73.9936681,17z" style='color: #000; text-decoration: none;'>36 Cooper Sq. New York, NY.</a></span>
+                  <span style=""><a href="https://www.google.com/maps/search/36+Cooper+Sq,+3rd+Floor.+New+York,+NY+10003/@40.7283288,-73.9936681,17z" style='color: #000; text-decoration: none;'>36 Cooper Sq. NY, NY.</a></span>
                </div>
             </div>
             <div>
@@ -105,7 +105,7 @@
                   <span style="">732-672-2937</span>
                   |
                   <span style="font-weight: bold;">a.</span>  
-                  <span style=""><a href="https://www.google.com/maps/search/36+Cooper+Sq,+3rd+Floor.+New+York,+NY+10003/@40.7283288,-73.9936681,17z" style='color: #000; text-decoration: none;'>36 Cooper Sq. New York, NY.</a></span>
+                  <span style=""><a href="https://www.google.com/maps/search/36+Cooper+Sq,+3rd+Floor.+New+York,+NY+10003/@40.7283288,-73.9936681,17z" style='color: #000; text-decoration: none;'>36 Cooper Sq. NY, NY.</a></span>
                </div>
             </div>
             <div>
