--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                      Spinners Entertainment
                   </span>
                   |
-                  <span style="font-weight: bold;">w.</span>
                   <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>spinnersent.com</a>
 
                </div>
@@ -39,10 +38,7 @@
             </div>
             <div>
                <div colspan="2" style="font-size: 11px; opacity: 0.825;">
-                  
-                  <span>
-                     Reviews: 
-                  </span>
+                  |
                   <span>
                      <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>The Knot</a>
                   </span>
@@ -92,7 +88,6 @@
                      Spinners Entertainment
                   </span>
                   |
-                  <span style="font-weight: bold;">w.</span>
                   <a href='http://www.spinnersent.com' style='color: #ff3a9e;'>spinnersent.com</a>
                   
                </div>
@@ -109,10 +104,7 @@
                </div>
             </div>
             <div>
-               <div colspan="2" style="font-size: 11px; opacity: 0.825;">
-                  <span>
-                     Reviews: 
-                  </span>
+               <div colspan="2" style="font-size: 11px; opacity: 0.825;">|
                   <span>
                      <a href='https://www.theknot.com/marketplace/spinners-entertainment-new-york-ny-558046' style='color: #ff3a9e;'>The Knot</a>
                   </span>
