--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'Trebuchet MS';">
    <div>
       <div style="padding-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 7px; border-top: 0; border-bottom: 0: border-left: 0; float: left;"><a href='http://www.spinnersent.com/'><img style='width: 150px;' id="preview-image-url" src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/jay_pic.png"></a></div>
-      <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 15px;">
-         <table cellpadding="0" cellspacing="0" border="0" style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0;">
+      <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 15px; min-width: 238px;">
+         <div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0;">
             <div>
                <div colspan="2" style="padding-bottom: 10px; font-size: 11px;">
                   <span style='font-weight: bold; color: #ff3a9e;'>
@@ -56,7 +56,7 @@
 
                </div>
             </div>
-         </table>
+         </div>
       </div>
    </div>
 </div>
@@ -71,8 +71,8 @@
 <div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0; font-family: 'Trebuchet MS';">
    <div>
       <div style="padding-top: 0; padding-bottom: 0; padding-left: 0; padding-right: 7px; border-top: 0; border-bottom: 0: border-left: 0; float: left;"><a href='http://www.spinnersent.com/'><img style='width: 150px;' id="preview-image-url" src="https://s3.amazonaws.com/scratchmusicgroup/Signatures/kev.png"></a></div>
-      <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 10px;">
-         <table cellpadding="0" cellspacing="0" border="0" style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0;">
+      <div style="padding-top: 0; padding-bottom: 0; padding-left: 12px; padding-right: 0; float: left; margin-top: 10px; min-width: 238px;">
+         <div style="background: none; border-width: 0px; border: 0px; margin: 0; padding: 0;">
             <div>
                <div colspan="2" style="padding-bottom: 10px; font-size: 11px;">
                   <span style='font-weight: bold; color: #ff3a9e;'>Kevin Walters</span>
@@ -122,7 +122,7 @@
 
                </div>
             </div>
-         </table>
+         </div>
       </div>
    </div>
 </div>
